--- a/analysis/benchmarkset-characterization.qmd
+++ b/analysis/benchmarkset-characterization.qmd
@@ -52,23 +52,6 @@ library(furrr)
 
 ```{r}
 #| warning: false
-anno_var_tbl_files <- list.files(
-  path = here("results/variant_tables"),
-  pattern = "variants.tsv",
-  recursive = TRUE,
-  full.names = TRUE
-)
-
-# derive initial labels then apply textual replacements to the NAMES
-(names(anno_var_tbl_files) <- anno_var_tbl_files %>%
-  str_extract("(?<=variant_tables/).*(?=/variants.tsv)") %>%
-  str_replace_all("^v421", "v4.2.1") %>%
-  str_replace_all("^v06", "v0.6") %>%
-  str_replace_all("^v5q", "v5.0q") %>%
-  str_replace_all("grch", "GRCh") %>%
-  str_replace_all("chm13", "CHM13v2.0"))
-
-
 tidy_smvar <- function(var_tbl) {
   ## remove variants outside benchmark regions
   in_bmk <- grepl(x = var_tbl$region_ids, pattern = "^BMKREGIONS")
@@ -293,6 +276,22 @@ read_bench_file <- function(path, col_info) {
 # Parallel read with furrr
 plan(multisession, workers = 12)
 
+anno_var_tbl_files <- list.files(
+  path = here("results/variant_tables"),
+  pattern = "variants.tsv",
+  recursive = TRUE,
+  full.names = TRUE
+)
+
+# derive initial labels then apply textual replacements to the NAMES
+(names(anno_var_tbl_files) <- anno_var_tbl_files %>%
+  str_extract("(?<=variant_tables/).*(?=/variants.tsv)") %>%
+  str_replace_all("^v421", "v4.2.1") %>%
+  str_replace_all("^v06", "v0.6") %>%
+  str_replace_all("^v5q", "v5.0q") %>%
+  str_replace_all("grch", "GRCh") %>%
+  str_replace_all("chm13", "CHM13v2.0"))
+
 bench_vars_tbls <- anno_var_tbl_files %>%
   enframe(name = "benchmarkset", value = "path") %>%
   mutate(
@@ -381,14 +380,15 @@ stvar_cnt_table %>%
   )
 ```
 
-### Variant Size Distributions
+## Variant Size Distributions
 
 
 ```{r}
 sv_len_df <- bench_vars_tbls %>%
   filter(
     bench_type == "stvar"
-  )
+  ) %>% 
+  mutate(ref = factor(ref, levels = c("GRCh37","GRCh38","CHM13v2.0")))
 
 (sv_len_dist_plt <- ggplot(
   sv_len_df,
@@ -455,7 +455,8 @@ smvar_len_df <- bench_vars_tbls %>%
   filter(
     bench_type == "smvar",
     var_type == "INDEL"
-  )
+  ) %>% 
+  mutate(ref = factor(ref, levels = c("GRCh37","GRCh38","CHM13v2.0")))
 
 (smvar_len_dist_plt <- ggplot(
   smvar_len_df,
@@ -480,7 +481,7 @@ smvar_len_df <- bench_vars_tbls %>%
 ```
 
 
-### Variants in Difficult Genomic Contexts
+## Variants in Difficult Genomic Contexts
 
 ```{r}
 diff_var_plt_df <- bench_vars_tbls %>%
